--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,14 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713754.md#1" target="_blank">27岁女孩罹子宫颈癌 女性应该做1个检查</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Cervical-cancer2-1113-150x120.jpg" align ="left"></a>布姆豪尔希望自己的故事能提醒其他女性认识子宫颈癌。“我不仅仅是患癌，还因此失去生育自己孩子的机会??”布姆豪尔以自己的亲身经历再次提醒人们，“请去做个子宫颈抹片检查吧。”子宫颈癌，多数因性传播病毒HPV引起。少数子宫颈癌与HPV感染无关，恶性度可能更高。子宫颈抹片检查和HPV检查可以帮助预防和早期发现子宫颈癌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:26 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718645.md#1" target="_blank">【梁厨美食】烤火鸡腿杂菜─感恩家常菜</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718645.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/61218ad5ace18b56ddb84b5f829cca05-150x120.jpg" align ="left"></a>烤火鸡腿杂菜轻松上桌；鸡腿去骨，肉切成厚片，蔬菜放碟中，上面铺上鸡肉淋上酱汁便可上桌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715521.md#1" target="_blank">图书馆沉闷吗？芬兰中央图书馆比游乐园还好玩</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1008399ab0d8527c8a0aef32f841002b-150x120.jpg" align ="left"></a>觉得图书馆沉闷吗？一来图书馆让人感觉拘谨，二来也可能没位子坐？不过这些问题在芬兰中央图书馆Oodi都不会存在，除基本图书功能之外，据说它比游乐园还好玩，且被评为2019年度全球最佳新建公共图书馆！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715575.md#1" target="_blank">猴子界的大明星 日本雪猴玩雪球、泡温泉萌翻网友</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715575.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3452185782597f30929e00e99691dbf6-150x120.jpg" align ="left"></a>生活在雪地里的日本雪猴（日本猕猴Macaca fuscata），它们有一身绵密而长的美丽毛发，在雪地里觅食、嬉戏和进行活动是它们的日常之外，日本雪猴以泡温泉打响了它们的知名度，被称为举世闻名的猴子界大明星。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713782.md#1" target="_blank">【C2食光-节气料理】初冬家常甜点 传承千年的南瓜派</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713782.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8e03414492b5285b07bf7defc3ee64f2-150x120.jpg" align ="left"></a>加了香料的南瓜派，可以让身体变得暖和，吃起来香甜不腻。不妨感受一下异国节日的风情，手工的心意，不只感谢上天赐予食物，同时上桌慰劳家人，和身边的人们说声“谢谢”吧～......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713125.md#1" target="_blank">【C2食光-节气料理】轻松抗秋燥 咖喱饭好吃的秘诀</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/44093b7b5a21079ee4c216ffafdf5907-150x120.jpg" align ="left"></a>进入秋季的最后一个节气－霜降。秋季养生适合平补，平补主要是平秋燥之气，饮食应当以温润为好。
-秋天干燥的气候可以吃些山药、红枣、萝卜、柿子、银耳及莲藕等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:43 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720930.md#1" target="_blank">线上叫车服务安全惹议 如何安全搭乘Uber？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/Tu3_shutterstock_1163375089-150x120.jpg" align ="left"></a>线上叫车服务已逐渐成为现代社会人们常用的一种出行方式，但这种私人共乘车的安全性问题也引发了越来越多的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720034.md#1" target="_blank">澳洲袋鼠打架 两条后腿可腾空飞踢</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-512657552-150x120.jpg" align ="left"></a>袋鼠是澳洲特有的物种，素以强而有力的后腿和跳跃能力见称。而它们的尾巴也有多种功能，不但能起到平衡身体的作用，也能作为进攻与防卫的武器。网上一段短片显示，袋鼠在打架时，可以用尾巴支撑地面，然后用两条后腿腾空飞踢对方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:06 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720291.md#1" target="_blank">车评：为七人车充电 2019 Chrysler Pacifica Hybrid Ltd</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019_Chrysler_Pacifica_Hybrid_01-150x120.jpg" align ="left"></a>对于有小孩子的家庭来说，Minivan是可完全发挥它的作用及好处，例如车内空间大、乘客出入方便、滑门开关占用面积小等，使这一类车型拥有一批固定客户。Chrysler的Town &amp; Country及旗下的Dodge Caravan在市场上超过廿年，自1983年至今年11月，售出超过1千5百万辆Minivan，所以.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717931.md#1" target="_blank">假新闻时时在身边 如何才能辨别真假？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717931.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/05/405180035450-150x120.jpg" align ="left"></a>“假新闻”（fake news）在英文中又分为两种：“资讯扭曲”（misinformation）和“刻意资讯造假”（disinformation）。细分来讲，前者通常是指现代社交媒体捕风捉影、以讹传讹，不经意中大面积传播错误的资讯。后者则是指有人刻意释出虚假资讯，为了蛊惑人心、达到某种不可告人的目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718195.md#1" target="_blank">冬季假期 节庆食品恐成宠物居家安全陷阱</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718195.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-72815346-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="Amsterdam, NETHERLANDS: Queenie the dog is already in the mood for Christmas 13 December 2006 in the VIP dog boutique in Amsterdam. With Christmas approaching, besides houses and streets, dogs can now also be decorated. AFP PHOTO- ANP/ COPYRIGHT EVERT ELZINGA ***NETHERLANDS OUT*** (Photo credit should read EVERT ELZINGA/AFP/Getty Images)" align ="left"></a>在冬季，对家中的宠物来说，可是有许多需要特别留意的危险，才不会让憾事发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:21 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719151.md#1" target="_blank">别错过这些“补肾食物” 中医分享养生吃法</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719151.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney-food_1304590291-150x120.jpg" align ="left"></a>冬天属水属肾，主封藏，是补肾的好时节，来看看哪些常见的食物能够补肾吧！五种补肾食物：1、黑芝麻：在中医的五行五色理论中，黑色属肾，黑色食物多入肾经，因此常见许多黑色的食物都有补肾的功效；2、黑豆；3、核桃；4、山药：山药也是补肾的一味重要的药材；5、羊肉。此外，补肾的食物还有黑米（紫米）、黑木耳、乌鸡、栗子等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 6:41 AM			</td></tr>
@@ -34,5 +24,16 @@ CX-30前脸的造型依旧可以看到新一代马自达3身上的影子，都是采用马自达家族式的混动设
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/18/n11663244.md#1" target="_blank">完全信赖的组织：“因为信任，所以简单”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/18/n11663244.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/12/1012031009512184-150x120.jpg" align ="left"></a>在公司中，用人不疑，疑人不用，对所有的人，完全信赖，所以组织简单，效率卓越。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713424.md#1" target="_blank">世界最亮！日环球影城《水晶之约》照亮圣诞节</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ecfe533e27bdb6dde4cf77d15519c2a6-150x120.jpg" align ="left"></a>圣诞节的欢乐浪漫气氛是很多人的最爱，2019年的世界各地的欢庆活动紧锣密鼓的展开了，热情的各出奇招的吸引游客前来观赏；而今年大阪日本环球影城则安排了一个明亮耀人的水晶圣诞节，再搭配圣诞主题秀《水晶之约》，打造一个全球最亮的圣诞节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713476.md#1" target="_blank">嫌弃涂鸦墙？她画出活的净化空气的“苔藓涂鸦”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/909d2387b0eb34ebd15f1d37d2bc5a91-150x120.jpg" align ="left"></a>一听到在墙面上作画，人们可能马上想起用油漆喷的涂鸦，但有人认为不美观，而且油漆会散发有毒化学物质；不过，现在有一种涂鸦画却大受欢迎，因为它不但美观，而且它是活的会生长、它会呼吸、而且还可以净化空气的‘苔藓涂鸦’。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:24 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710860.md#1" target="_blank">欢迎系绳竉物 德州夫妇带1600磅竉物“踢馆”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c0dab4d28dc04d022de707136b7f7187-150x120.jpg" align ="left"></a>在美国德州一对夫妇决定带一只独特的竉物出门，到一家新开幕的竉物商店佩特科（Petco）去逛逛，因为商店打出广告说：“所有绑上绳带的竉物，都欢迎进来参观！”实际上是他们想要去‘踢馆’，看看那家店真会欢迎这只与众不同的庞然大物吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:13 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710898.md#1" target="_blank">遛狗奇人一次带20只还能大合照 怎么办到的？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11710898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/67abcffb0cf74c84a405ce92e0699261-150x120.jpg" align ="left"></a>有养过狗狗的人都知道，狗狗一天最少也要出门放风2～3次，但是住在城市里的人怎么办呢？因此有些爱狗而又忙碌的人会把狗狗托给专业的遛狗人，据国外媒体报导，在美国遛狗已经是一门热门产业，我们来看看一位纽约的遛狗专家有多厉害！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:05 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715028.md#1" target="_blank">五招改善老式排屋采光</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sweden-421804_1280-150x120.jpg" align ="left"></a>排屋（Terrace）是澳大利亚一种连成一排的房子。悉尼和墨尔本的大部分排屋修建于1850年到1890年之间，后来新建的比较少。这些房子大多比较旧，但是多位于很好的城区地段，因此很多人愿意把它们翻修一下带来全新的格调。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714912.md#1" target="_blank">亚洲航空公司拟全球开店百家 出售飞机餐</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714912.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-963669478-1-150x120.jpg" align ="left"></a>飞机上的餐点通常不被认为是美食，但亚洲航空公司（AirAsia）却对自家的飞机餐有信心，该公司计划在全世界开设上百家餐厅，与各地民众分享其机上美食。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:31 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715014.md#1" target="_blank">为你的狗狗打造完美的宠物之家</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715014.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/pets-3715733_1280-150x120.jpg" align ="left"></a>在澳大利亚，超过30%的家庭养有宠物狗，这些宠物是给生活带来欢乐的重要家庭成员。
+
+但是，现代社会的繁忙也导致了狗狗被单独留在家里，从而导致它们变得紧张和焦虑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:31 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713510.md#1" target="_blank">【C2食光-节气料理】立冬补冬 依体质进补</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713510.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b025b2d1a5af6955e20898a96ca4b1a8-150x120.jpg" align ="left"></a>立冬这天华人有立冬补冬的传统，吃些温热益补的食材，可帮助抵挡寒冷的气温，如，麻油，姜，白萝卜，花生，大枣，雪梨。俗话说“立冬补冬，补嘴坑”，不可胡乱进补，要视个人体质，适当做调整。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714996.md#1" target="_blank">2020年将迎来户外风潮</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714996.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/table-1489057_1280-150x120.jpg" align ="left"></a>当你拥有一个大后院、空间不再成为问题，为什么不多建几个户外座位？将后院划分为不同的座位区是一个好主意，原因有很多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714982.md#1" target="_blank">六个户外升级窍门 助做好房屋夏季娱乐准备</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/home-1142807_1280-150x120.jpg" align ="left"></a>宜人的天气和夏日漫长的夜晚非常适合户外生活。而且好在无论您的预算如何，都可以很容易地改善您的娱乐空间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711280.md#1" target="_blank">【C2食光-节气料理】霜降养生 北海道鲑鱼石狩锅</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711280.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ac961e80a2738a6a4895be12306a6069-150x120.jpg" align ="left"></a>进入秋季的最后一个节气－霜降，饮食应当以温润为好。石狩锅是一道北海道的乡土料理。来自鲑鱼产量丰富的石狩川。在江户时代当地的渔夫在辛苦的捕鲑鱼活动后，将其加上洋葱和白菜等蔬菜做成味噌汤，放入新鲜鲑鱼来做为庆功和慰劳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
